# kinetic-gas

./: CMakeLists.txt  strategy.txt
.github/workflows/: ccpp.yml
src/: CMakeLists.txt  bitmap_renderer.cpp  bitmap_renderer.h  collision_event.h  collision_predictor.h  crash.cpp  dynamic_object.h  frame_event.cpp  frame_event.h  particle.h  particle_factory.h  particle_particle_collision.cpp  particle_particle_collision.h  random_number_source.h  renderer.cpp  renderer.h  timed.h  timed_event.h  vec.h  video_renderer.cpp  video_renderer.h  wall.h  wall_factory.h  wall_particle_collision.cpp  wall_particle_collision.h
src/dynamic_objects/: particle.h  wall.h
src/renderer/: bitmap_renderer.cpp  bitmap_renderer.h  renderer.cpp  renderer.h  video_file_output.cpp  video_file_output.h
src/timed_events/collision_events/: collision_event.h  particle_particle_collision.cpp  wall_particle_collision.h
src/util/: random_number_source.cpp  random_number_source.h  random_ranged_double_source.h  random_source.h  random_unit_velocity_source.h  uniform_unit_random_source.cpp  uniform_unit_random_source.h  value_source.h
src/util/value_sources/: constant_source.h  random_unit_velocity_source.h  uniform_unit_random_source.cpp  value_source.h
